Also build on pushes to main

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,11 @@
 ---
 name: Publish
-on: workflow_dispatch
+
+on:
+  workflow_dispatch:
+  push:
+    branches: [main]
+
 jobs:
   publish:
     name: Publish
@@ -25,6 +30,8 @@ jobs:
         git config user.name github-actions
         git config user.email github-actions@github.com
         git add .
-        git commit -m "Automatically rebuild site from GitHub Actions"
-        git push
+        if git commit -m "Automatically rebuild site from GitHub Actions";
+        then
+          git push
+        fi
 
